Fixed filter visibility

--- a/src/filters/guests/guestsValues.module.css
+++ b/src/filters/guests/guestsValues.module.css
@@ -1,17 +1,21 @@
-.hidden {
-    display: none;
-}
-
 .visible {
     display: block;
 }
 
+.hidden {
+    display: none;
+}
 
 @media screen and (min-width: 800px) {
-    /* .hidden {
+    .visible {
+        visibility: visible;
+    }
+    .hidden {
         display: block;
-    } */
-    .invisible {
         visibility: hidden;
+    }
+
+    .fucked {
+        display: none;
     }
 }
